syntax = "proto3";
package user;

option go_package = "nfxid/protos/gen/directory/user;userpb";

import "google/protobuf/timestamp.proto";

// 用户状态枚举
enum DirectoryUserStatus {
  DIRECTORY_USER_STATUS_UNSPECIFIED = 0;
  DIRECTORY_USER_STATUS_PENDING = 1;   // 待定
  DIRECTORY_USER_STATUS_ACTIVE = 2;    // 激活
  DIRECTORY_USER_STATUS_DEACTIVE = 3;  // 停用
}

// 用户信息
message User {
  string id = 1;                          // 用户ID (UUID)
  string username = 2;                    // 用户名 (varchar(50))
  DirectoryUserStatus status = 3;        // 状态：pending, active, deactive
  bool is_verified = 4;                   // 是否已验证
  optional google.protobuf.Timestamp last_login_at = 5; // 最后登录时间
  google.protobuf.Timestamp created_at = 6;       // 创建时间
  google.protobuf.Timestamp updated_at = 7;       // 更新时间
  optional google.protobuf.Timestamp deleted_at = 8; // 软删除时间
}

// User 服务 - 供其他服务通过 gRPC 管理用户
service UserService {
  // 创建用户
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  
  // 根据ID获取用户
  rpc GetUserByID (GetUserByIDRequest) returns (GetUserByIDResponse);
  
  // 根据用户名获取用户
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (GetUserByUsernameResponse);
  
  // 批量获取用户
  rpc BatchGetUsers (BatchGetUsersRequest) returns (BatchGetUsersResponse);
}

// User Service Messages
message CreateUserRequest {
  string username = 1;                    // 用户名 (varchar(50))
  DirectoryUserStatus status = 2;        // 状态：pending, active, deactive
  bool is_verified = 3;                   // 是否已验证
}

message CreateUserResponse {
  User user = 1;
}

message GetUserByIDRequest {
  string id = 1;
}

message GetUserByIDResponse {
  User user = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByUsernameResponse {
  User user = 1;
}

message BatchGetUsersRequest {
  repeated string ids = 1;
}

message BatchGetUsersResponse {
  repeated User users = 1;
}
